src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/pagination-widget.scss
.oro-pagination {
  white-space: nowrap;

  > span {
    display: inline-block;
    vertical-align: middle;

    font-size: $base-font-size;

    + .oro-pagination__pager {
      margin: 0 0 0 5px;
    }
  }

  &__pager {
    display: inline-block;
    vertical-align: middle;

    font-size: 0;
    text-align: center;
    
    + span {
      margin-left: 5px;
    }

    &__prev,
    &__next {
      display: inline-block;
      width: 23px;
      vertical-align: middle;
      padding: 0;
      border: 1px solid get-color('additional', 'light');

      background: get-color('additional', 'base');
      color: get-color('additional', 'dark');
      font-size: 16px;
      line-height: 1.8;
      text-decoration: none;

      cursor: pointer;

      &.disabled {
        color: get-color('additional', 'middle');

        cursor: default;
      }

      i {
        margin-right: 0;
      }
    }

    &__prev {
      border-top-left-radius: 5px;
      border-bottom-left-radius: 5px;
    }

    &__next {
      border-top-right-radius: 5px;
      border-bottom-right-radius: 5px;
    }

    &__input {
      display: inline-block;
      width: 30px;
      vertical-align: middle;
      padding: 0;
      border-radius: 0;
      border: 0;
      border-top: 1px solid get-color('additional', 'light');
      border-bottom: 1px solid get-color('additional', 'light');

      font-size: $base-font-size;
      line-height: 2;
      text-align: center;

      appearance: none;
    }
  }
}

@include breakpoint('tablet') {
  .oro-pagination {
    > span {
      + .oro-pagination__pager {
        margin: 0;
      }
    }
  }
}

